# sub_app_cross

./: .gitignore  AGENTS.md  README.md
.github/workflows/: build.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Toolbar.jsx
src/hooks/: useSubtitles.js
