[package]
name = "subtitleburner"
version = "0.1.0"
description = "Video subtitle editor with Whisper transcription"
authors = ["SubtitleBurner"]
edition = "2021"

[lib]
name = "subtitle_burner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
whisper-rs = "0.11"
reqwest = { version = "0.12", features = ["blocking"] }
